name:                snake
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/snake#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable snake
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, time, sdl2, microlens, microlens-platform, sdl2-ttf, grid, text, random

